--- a/cleon-products/application.yaml
+++ b/cleon-products/application.yaml
@@ -5,7 +5,7 @@ spring:
   jpa:
     show-sql: true
   profiles:
-    active: dev
+    active: qa
   cache:
     jcache:
       config: classpath:ehcache.xml
